# Carretinhas

./: .env.example  .gitattributes  .gitignore  01-levantamento-e-escopo.md  02-arquitetura-tecnica.md  03-banco-de-dados.md  04-modulos-regras-e-api.md  05-seguranca-lgpd-e-rbac.md  06-plano-de-implementacao.md  07-testes-deploy-e-operacao.md  PROMPT-MESTRE-GEMINI.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_7337dbec3b13_schema_inicial.py  a1f63b58e006_documentos_cancelamento_diarias.py  b5a91c32f001_bloco_5_reservas.py  c6b20d14a002_bloco_6_vistorias.py  d7c30e25b003_bloco_8_financeiro_documentos.py  e8d41f36c004_assinaturas_vistorias.py  f9e52a47d005_recibo_cobrancas_extras.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/routers/: auth.py  clients.py  financial.py  health.py  inspections.py  (+5 more)
backend/app/core/: config.py  db.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  base.py  client.py  client_document.py  enums.py  financial.py  history.py  inspection.py  maintenance.py  refresh_token.py  rental.py  trailer.py  user.py
backend/app/repositories/: client_repo.py  financial_repo.py  inspection_repo.py  maintenance_repo.py  refresh_token_repo.py  rental_repo.py  reporting_repo.py  trailer_repo.py  user_repo.py
backend/app/schemas/: auth.py  client.py  financial.py  inspection.py  maintenance.py  rental.py  reporting.py  trailer.py  user.py
backend/app/services/: audit_service.py  auth_service.py  client_service.py  financial_service.py  inspection_service.py  maintenance_service.py  pdf_service.py  rental_service.py  reporting_service.py  storage_service.py  trailer_service.py  user_service.py
backend/app/tests/: conftest.py  helpers.py  test_auth.py  test_clients.py  test_constraints.py  test_errors.py  test_financial.py  test_health.py  test_inspections.py  test_maintenance.py  test_migrations.py  test_rentals.py  test_reporting.py  test_seed.py  test_trailers.py  test_users_rbac.py
backend/scripts/: seed.py  start.py
(+49 files in other folders)
