[project]
name = "assiscarretas-backend"
version = "0.1.0"
description = "API do AssisCarretas — gestão de locação de carretas"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "A", "C4", "T20", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# S101: assert é esperado em testes; S106: credenciais fictícias de teste
"app/tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
